# Operating-system

Lab1_OS/: CMakeLists.txt
Lab1_OS/Lab1_OS/: CMakeLists.txt  CMake_Try.cpp  CMake_Try.h  Creator.cpp  Main.cpp  Reporter.cpp
Lab2_1_OS/: CMakeLists.txt
Lab2_1_OS/Lab2_1_OS/: CMakeLists.txt  Func_Lab2_1_OS.cpp  Lab2_1_OS.cpp  Lab2_1_OS.h  Test_Lab2_1.cpp
Lab2_OS/: CMakeLists.txt
Lab2_OS/Lab2_OS/: CMakeLists.txt  Func_Lab2_OS.cpp  Lab2_OS.cpp  Lab2_OS.h  Test_Lab2.cpp
Lab3_Osi/: CMakeLists.txt
Lab3_Osi/Lab3_Osi/: CMakeLists.txt  Lab3_Osi.cpp  Lab3_Osi.h
Lab4_1_OS/: Lab4_1_OS.sln
Lab4_1_OS/Sender/: Sender.cpp  Sender.vcxproj
Lab4_2_OS/: Lab4_2_OS.sln
Lab4_2_OS/Lab4_2_OS/: Lab4_2_OS.cpp  Lab4_2_OS.vcxproj  Lab4_2_OS.vcxproj.filters
Lab4_2_OS/Sender/: Sender.cpp  Sender.vcxproj
Lab4_OS/: CMakeLists.txt
Lab4_OS/Lab4_OS/: CMakeLists.txt  Lab4_OS.cpp  Lab4_OS.h
Lab5_OS/: Lab5_OS.sln
Lab5_OS/Lab5_OS/: Lab5_OS.vcxproj  server.cpp
Lab5_OS/client/: client.cpp  client.vcxproj
